--- a/src/app/adminPage/admin/admin.component.html
+++ b/src/app/adminPage/admin/admin.component.html
@@ -1,3 +1,7 @@
+<ul class="header">
+    <li><h2 routerLink="/home" class ="Title">Web Bidding.com</h2></li>
+    <li class="comment">Best bidding website</li>
+  </ul>
 <mat-toolbar class="navBar">
   <span class="AdminPanel" routerLink="/admin"> Admin Panel</span>
   <div class="rightNavBar">
@@ -10,7 +14,7 @@
   <mat-list>
     <div class="Dashboard">
       <mat-icon mat-list-icon>menu</mat-icon>
-      <h2>Dash board</h2>
+      <span>Dash Board</span>  
     </div>
 
     <mat-list-item *ngFor="let value of dashBoard">
