--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -1,1 +1,37 @@
-<p>log-in works!</p>
+<header>
+  <h2>Log In</h2>
+</header>
+<body>
+  <div [formGroup]="profileForm" class="form-group">
+    <label>
+      Email:
+    </label>
+
+    <mat-form-field>
+      <input
+        class="form-control form-control-sm"
+        matInput
+        type="text"
+        formControlName="email"
+      />
+      <mat-error *ngIf="profileForm.get('email')"> Email invalid</mat-error>
+    </mat-form-field>
+
+    <label>
+      Password:
+    </label>
+    <mat-form-field>
+        <input
+          class="form-control form-control-sm"
+          matInput
+          type="password"
+          formControlName="password"
+        />
+        <mat-error *ngIf="profileForm.get('password')"> Password invalid</mat-error>
+      </mat-form-field>
+
+    <button type="submit" (click)="onSubmit()" [disabled]="!profileForm.valid" >
+      Submit
+    </button>
+  </div>
+</body>
