--- a/src/app/HomePage/apartment/apartment.component.html
+++ b/src/app/HomePage/apartment/apartment.component.html
@@ -2,7 +2,7 @@
   <mat-list>
     <mat-list-item>
       <mat-icon mat-list-icon>menu</mat-icon>
-      <h4 mat-line>dashboard</h4>
+      <h4 mat-line>Dash board</h4>
     </mat-list-item>
     <mat-list-item>
       <mat-icon mat-list-icon>arrow_forward</mat-icon>
@@ -18,5 +18,55 @@
     </mat-list-item>
     <mat-divider></mat-divider>
   </mat-list>
-  hello
+
+  <ul>
+    <li>
+      <div class="card" style="width: 18rem;">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSReVMYOurR2cj1qXFLRYMs59FllIm4FixfUiXIj_1c2wWLSquf0Q&s"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Căn hộ 1 phòng khách, 2 phòng ngủ, 1 phòng bếp,1 phòng vệ sinh</h5>
+          <p class="card-text">
+            Diện tích căn hộ: 100m2
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Giá hiện tại: 1.800 triệu</li>
+          <li class="list-group-item">Status: Còn Hàng</li>
+          <li class="list-group-item">Giá mua luôn: 2.200 triệu</li>
+        </ul>
+        <div class="card-body-button">
+          <button type="button" class="btn btn-primary">Đấu giá</button>
+          <button type="button" class="btn btn-success">Mua luôn</button>
+        </div>
+      </div>
+    </li>
+    <li>
+      <div class="card" style="width: 18rem;">
+        <img
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSReVMYOurR2cj1qXFLRYMs59FllIm4FixfUiXIj_1c2wWLSquf0Q&s"
+          class="card-img-top"
+          alt="..."
+        />
+        <div class="card-body">
+          <h5 class="card-title">Căn hộ 1 phòng khách, 3 phòng ngủ, 1 phòng bếp,2 phòng vệ sinh</h5>
+          <p class="card-text">
+            Diện tích căn hộ: 150m2
+          </p>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item">Giá hiện tại: 2.500 triệu</li>
+          <li class="list-group-item">Status: Còn Hàng</li>
+          <li class="list-group-item">Giá mua luôn: 3.000 triệu</li>
+        </ul>
+        <div class="card-body-button">
+            <button type="button" class="btn btn-primary">Đấu giá</button>
+            <button type="button" class="btn btn-success">Mua luôn</button>
+          </div>
+      </div>
+    </li>
+  </ul>
 </body>
