--- a/src/app/HomePage/dashboard-home/dashboard-home.component.html
+++ b/src/app/HomePage/dashboard-home/dashboard-home.component.html
@@ -1,1 +1,11 @@
-
+<body>
+  Ra đời vào năm 2019, WebBidding.com là website hàng đầu và đầu tiên cung cấp
+  nền tảng mua sắm xuyên biên giới theo khu vực tại Đông Nam Á. Chúng tôi nỗ lực
+  hướng tới dịch vụ hoàn hảo trong khi tập trung hơn vào các nhu cầu địa phương
+  để phát triển các dịch vụ mới phù hợp hơn tới tất cả các khách hàng. Mục tiêu
+  của chúng tôi là trở thành một điểm đến online được ưa thích đối với việc đấu
+  giá trực tuyến xuyên biên giới cho tất cả các loại sản phẩm như thời trang, đồ
+  trang trí nội thất, sức khỏe và làm đẹp, các dụng cụ thể thao và đồ điện tử.
+  WebBidding.com cung cấp một trải nghiệm đấu giá online tiện lợi bằng việc cung cấp các
+  sản phẩm đến từ tập đoàn Vin Group
+</body>
