--- a/src/app/HomePage/dashboard-home/dashboard-home.component.css
+++ b/src/app/HomePage/dashboard-home/dashboard-home.component.css
@@ -1,5 +1,8 @@
 
 
-/* .Dashboard .icon{
-
-} */
+body{
+    background-image: url(https://s3.envato.com/files/247451692/4.%20Preview%20Image.jpg);
+    height: 100vh;
+    background-size:cover ;
+    width:100%;
+}
