--- a/src/app/HomePage/motorbike/motorbike.component.css
+++ b/src/app/HomePage/motorbike/motorbike.component.css
@@ -11,3 +11,10 @@ body{
     display: flex;
     
 }
+
+body{
+    background-image: url(https://s3.envato.com/files/247451692/4.%20Preview%20Image.jpg);
+    height: 100vh;
+    background-size:cover ;
+    width:100%;
+}
