--- a/src/app/HomePage/motorbike/motorbike.component.html
+++ b/src/app/HomePage/motorbike/motorbike.component.html
@@ -2,22 +2,18 @@
     <mat-list>
       <mat-list-item>
         <mat-icon mat-list-icon>menu</mat-icon>
-        <h4 mat-line>dashboard</h4>
+        <h4 mat-line>Dash board</h4>
       </mat-list-item>
       <mat-list-item>
         <mat-icon mat-list-icon>arrow_forward</mat-icon>
-        <h4 mat-line>Riverside</h4>
+        <h4 mat-line>Vin Fast Klara</h4>
       </mat-list-item>
       <mat-list-item>
         <mat-icon mat-list-icon>arrow_forward</mat-icon>
-        <h4 mat-line>Time City</h4>
+        <h4 mat-line>Vin Fast Impes</h4>
       </mat-list-item>
-      <mat-list-item>
-        <mat-icon mat-list-icon>arrow_forward</mat-icon>
-        <h4 mat-line>Royal City</h4>
-      </mat-list-item>
+      
       <mat-divider></mat-divider>
     </mat-list>
-    hello
   </body>
   
