--- a/src/app/adminPage/user-list/user-list.component.html
+++ b/src/app/adminPage/user-list/user-list.component.html
@@ -1,4 +1,3 @@
-
 <div class="header">
   <h1>User List</h1>
 </div>
@@ -12,7 +11,14 @@
         placeholder="Filter"
       />
     </mat-form-field>
-    <button class="btn btn-primary" data-toggle="button" aria-pressed="false" routerLink = "/admin/newUser">+Add</button>
+    <button
+      class="btn btn-primary"
+      data-toggle="button"
+      aria-pressed="false"
+      routerLink="/admin/newUser"
+    >
+      +Add
+    </button>
   </div>
 
   <div class="shadow p-3 mb-5 bg-white rounded">
@@ -24,9 +30,14 @@
       </ng-container>
 
       <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef>Name</th>
-        <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+      <ng-container matColumnDef="First Name">
+        <th mat-header-cell *matHeaderCellDef>First Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.fisrtName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Last Name">
+        <th mat-header-cell *matHeaderCellDef>Last Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
       </ng-container>
 
       <ng-container matColumnDef="Wallet">
@@ -52,9 +63,31 @@
       </ng-container>
 
       <ng-container matColumnDef="Action">
-          <th mat-header-cell *matHeaderCellDef>Action</th>
-          <td mat-cell *matCellDef="let element"><mat-icon aria-hidden="false" aria-label="Create icon" routerLink = "/admin/editUser">create</mat-icon></td>
-        </ng-container>
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let element" class="icon">
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Create icon"
+            (click)="
+              openDialog(
+                element.id,
+                element.fisrtName,
+                element.lastName,
+                element.email,
+                element.Phone,
+                element.role
+              )
+            "
+            >create</mat-icon
+          >
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Example home icon"
+            (click)="onDelete(element.id - 1)"
+            >delete</mat-icon
+          >
+        </td>
+      </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
