--- a/src/app/adminPage/user-list/user-list.component.html
+++ b/src/app/adminPage/user-list/user-list.component.html
@@ -74,6 +74,7 @@
                 element.fisrtName,
                 element.lastName,
                 element.email,
+                element.role,
                 element.Phone,
                 element.role
               )
