--- a/src/app/HomePage/home/home.component.html
+++ b/src/app/HomePage/home/home.component.html
@@ -4,7 +4,7 @@
   <li class="comment"><button mat-raised-button color="primary" routerLink = "/logIn">Sign In</button></li>
 </ul>
 
-<nav mat-tab-nav-bar>
+<nav mat-tab-nav-bar class = "navBar">
   <a
     mat-tab-link
     *ngFor="let link of navLinks"
