--- a/src/app/Pages/log-in/log-in.component.html
+++ b/src/app/Pages/log-in/log-in.component.html
@@ -11,6 +11,7 @@
         </label>
 
         <mat-form-field>
+          
           <input
             class="form-control form-control-sm"
             matInput
@@ -36,13 +37,12 @@
         </mat-form-field>
         <div class="submitButton">
           <mat-checkbox color="primary">Remember Me</mat-checkbox>
-          <button
-            type="submit"
-            (click)="onSubmit()"
-            [disabled]="!profileForm.valid"
-          >
-            Submit
-          </button>
+          
+
+          <button mat-raised-button color="primary" type="submit"
+          (click)="onSubmit()"
+          [disabled]="!profileForm.valid">Submit</button>
+            
         </div>
         <div id = "signUp" routerLink = "/signUp">
             Do not have account? Sign Up
