--- a/src/app/Pages/sign-up/sign-up.component.css
+++ b/src/app/Pages/sign-up/sign-up.component.css
@@ -5,7 +5,7 @@ header {
     padding-right: 100px;
     padding-bottom: 10px;
     max-width: 500px;
-    font-size: 25px;
+    font-size: 20px;
     /* text-align: center; */
 }
 
@@ -21,6 +21,7 @@ body .form-group{
     flex-direction: column;
     /* text-align: center; */
     max-width: 300px;
+    font-size: 15px;
 
 }
 .form {
@@ -66,7 +67,7 @@ html{
 
 div.submitButton {
     display:flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     padding-bottom: 10px;
 }
 
