--- a/src/app/adminPage/new-product/new-product.component.css
+++ b/src/app/adminPage/new-product/new-product.component.css
@@ -1,47 +1,65 @@
 header {
-    padding-left:20px;
+    /* padding-left:20px; */
     padding-top: 20px;
     text-align: center;
+    display: flex;
+    justify-content: space-between;
 }
 
 body{
-    padding-left:20px;
-    display: flex;
+    padding-left:25px;
+    background-color: #b8c9db;
+    border-radius: 15px;
+    min-width: 550px;
+    background-color: #b8c9db;
 }
 
 .form {
     display:flex;
     flex-direction: column;
+    /* border-radius: 15px;
+    border: 2px solid red; */
     /* border: 1px solid rgb(209, 192, 192) */
 }
 
-.mat-form-field-appearance-legacy .mat-form-field-infix {
-    height: 50px;
-    padding: 0px;
-}
 
 label {
     margin: 0px;
 }
 
 input{
-    padding-top: 0px;
-    padding-bottom: 0px;
-    max-width: 550px;
+    min-width: 500px;
+    padding: 10px ;
+    margin-right: 10px;
+    
 }
 
 button{
     background-color: blue;
-    color: black;
+
     cursor: pointer;
     border-top: 0px;
+    max-width: 75px;
+    text-align: center;
 }
 
 .form-container{
     height: 100%;
     padding: 20px;
+    padding-left:100px;
+    margin-left: 150px;
+    border: 2px solid 136ed6;
+    border-radius: 15px;
+    /* background-color: #136ed6 */
 }
 
-div .Name label{
-    padding: 10px;
+
+
+div .title{
+    text-align: center;
 }
+
+div mat-form-field{
+    padding-right: 15px;
+}
+
