--- a/src/app/adminPage/product-list/product-list.component.html
+++ b/src/app/adminPage/product-list/product-list.component.html
@@ -1,90 +1,93 @@
 <div class="header">
-    <h1>Product List</h1>
+  <h1>Product List</h1>
+</div>
+
+<body>
+  <div class="filterAndAdd">
+    <mat-form-field>
+      <input
+        matInput
+        (keyup)="applyFilter($event.target.value)"
+        placeholder="Filter"
+      />
+    </mat-form-field>
+    <button
+      class="btn btn-primary"
+      data-toggle="button"
+      aria-pressed="false"
+      routerLink="/admin/newProduct"
+    >
+      +Add
+    </button>
   </div>
-  
-  <body>
-    <div class="filterAndAdd">
-      <mat-form-field>
-        <input
-          matInput
-          (keyup)="applyFilter($event.target.value)"
-          placeholder="Filter"
-        />
-      </mat-form-field>
-      <button class="btn btn-primary" data-toggle="button" aria-pressed="false" routerLink = "/admin/newProduct">+Add</button>
-    </div>
-  
-    <div class="shadow p-3 mb-5 bg-white rounded">
-      <table mat-table [dataSource]="dataSource">
-        <!-- Position Column -->
-        <ng-container matColumnDef="id">
-          <th mat-header-cell *matHeaderCellDef>ID</th>
-          <td mat-cell *matCellDef="let element">{{ element.id }}</td>
-        </ng-container>
-  
-        <!-- Name Column -->
-        <ng-container matColumnDef="Name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
-          <td mat-cell *matCellDef="let element">{{ element.Name }}</td>
-        </ng-container>
-  
-        <ng-container matColumnDef="Category">
-            <th mat-header-cell *matHeaderCellDef>Category</th>
-            <td mat-cell *matCellDef="let element">{{ element.Category }}</td>
-          </ng-container>
-  
-        <ng-container matColumnDef="Price">
-          <th mat-header-cell *matHeaderCellDef>Price</th>
-          <td mat-cell *matCellDef="let element">
-            {{ element.Price | currency: "USD" }}
-          </td>
-        </ng-container>
-        <!-- Weight Column -->
-        <ng-container matColumnDef="Quantity">
-          <th mat-header-cell *matHeaderCellDef>Quantity</th>
-          <td mat-cell *matCellDef="let element">{{ element.Quantity }}</td>
-        </ng-container>
-        
-        <ng-container matColumnDef="Action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let element" class="icon">
-              <mat-icon
-                aria-hidden="false"
-                aria-label="Create icon"
-                (click)="
-                  openDialog(
-                    element.id,
-                    element.Name,
-                    element.Category,
-                    element.Price,
-                    element.Quantity
-                  )
-                "
-                >create</mat-icon
-              >
-              <mat-icon
+
+  <div class="shadow p-3 mb-5 bg-white rounded">
+    <table mat-table [dataSource]="dataSource">
+      <!-- Position Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let element">{{ element.id }}</td>
+      </ng-container>
+
+      <!-- Name Column -->
+      <ng-container matColumnDef="Name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let element">{{ element.productName }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Category">
+        <th mat-header-cell *matHeaderCellDef>Category</th>
+        <td mat-cell *matCellDef="let element">{{ element.Category }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Description">
+        <th mat-header-cell *matHeaderCellDef>Description</th>
+        <td mat-cell *matCellDef="let element">{{ element.description }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="Price">
+        <th mat-header-cell *matHeaderCellDef>Price</th>
+        <td mat-cell *matCellDef="let element">
+          {{ element.priceStart | currency: "USD" }}
+        </td>
+      </ng-container>
+      <!-- Weight Column -->
+      
+
+      <ng-container matColumnDef="Action">
+        <th mat-header-cell *matHeaderCellDef>Action</th>
+        <td mat-cell *matCellDef="let element" class="icon">
+          <mat-icon
+            aria-hidden="false"
+            aria-label="Create icon"
+            (click)="
+              openDialog(
+                element.id,
+                element.productName,
+                element.description,
+                element.productImage,
+                element.Category,
+                element.priceStart,
+                element.startTime,
+                element.endTime,
+                element.status
+              )
+            "
+            >create</mat-icon
+          >
+          <mat-icon
                 aria-hidden="false"
                 aria-label="Example home icon"
                 (click)="onDelete(element.id - 1)"
                 >delete</mat-icon
               >
-            </td>
-          </ng-container>
-        
-  
-        <!-- <ng-container matColumnDef="Action">
-            <th mat-header-cell *matHeaderCellDef>Action</th>
-            <td mat-cell *matCellDef="let element" class = "icon">
-              <mat-icon aria-hidden="false" aria-label="Create icon" (click)="openDialog( element.id,element.fisrtName,element.lastName, element.email,element.Phone,element.role)">create</mat-icon>
-              <mat-icon aria-hidden="false" aria-label="Example home icon" (click) = "onDelete(element.id -1 )" >delete</mat-icon>
-            </td>
-            
-            
-          </ng-container> -->
-  
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
-    </div>
-  </body>
-  
+        </td>
+      </ng-container>
+
+
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
+</body>
