--- a/src/app/adminPage/user-list/user-list.component.css
+++ b/src/app/adminPage/user-list/user-list.component.css
@@ -48,8 +48,10 @@ button{
   padding-top:0px;
   padding-bottom: 0px;
   height: 40px;
+
 }
 
 mat-icon {
   padding-right: 40px;
+  /* max-width: 400px; */
 }
